C++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:51:50 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -o Practice-2.exe "src\\b.o" 
c:/mingw/bin/../lib/gcc/mingw32/8.2.0/../../../../mingw32/bin/ld.exe: c:/mingw/bin/../lib/gcc/mingw32/8.2.0/../../../libmingw32.a(main.o):(.text.startup+0xb0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
20:53:03 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
gcc -o Practice-2.exe "src\\Practice-2.o" "src\\b.o" 
20:53:38 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
gcc -o Practice-2.exe "src\\Practice-2.o" "src\\b.o" 
20:53:55 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
gcc -o Practice-2.exe "src\\Practice-2.o" "src\\b.o" 
20:55:11 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
..\src\Practice-2.c: In function 'rotatematrix':
..\src\Practice-2.c:102:2: error: expected expression before '}' token
  }
  ^
20:55:22 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
gcc -o Practice-2.exe "src\\Practice-2.o" "src\\b.o" 
20:57:21 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
..\src\Practice-2.c: In function 'rotatematrix':
..\src\Practice-2.c:55:36: error: 'j' undeclared (first use in this function)
    printf("[%d] [%d] = %d  \n",row,j,mat[row][i]);
                                    ^
..\src\Practice-2.c:55:36: note: each undeclared identifier is reported only once for each function it appears in
20:57:26 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
gcc -o Practice-2.exe "src\\Practice-2.o" "src\\b.o" 
21:02:09 **** Incremental Build of configuration Debug for project Practice-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Practice-2.o" "..\\src\\Practice-2.c" 
gcc -o Practice-2.exe "src\\Practice-2.o" "src\\b.o" 
